Mon Jan 12 18:41:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.cpp (register_if_necessary):
          Don't check if the transport is registered, we could get a thread
          switch between the check and the registration. Also only when the
          register_handler returns -1 we have a failure, with 1 it is already
          registered. This fixes bugzilla 3543

        * tao/Wait_On_Read.cpp:
        * tao/Wait_Strategy.cpp:
          Layout change

        * tao/Wait_Strategy.h:
          Doxygen change

        * tao/Exception.h:
          Layout changes

Mon Jan 12 18:26:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3543_Regression/master.cpp:
        * tests/Bug_3543_Regression/run_test.pl:
        * tests/Bug_3543_Regression/server.cpp:
          Do a controlled shutdown

Mon Jan 12 16:00:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3543_Regression/Bug_3543_Regression.mpc:
          These executables use threads

        * tests/Bug_3543_Regression/master.cpp:
          Fixed fuzz errors

Mon Jan 12 15:42:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3543_Regression/Bug_3543_Regression.mpc:
        * tests/Bug_3543_Regression/master.cpp:
        * tests/Bug_3543_Regression/run_test.pl:
          Improved this test

Mon Jan 12 15:18:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3543_Regression/*:
          New regression test for bugzilla 3543

Mon Jan 12 11:54:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Parser_Registry.cpp:
          Unicode fix

        * tao/Transport.cpp:
          Fixed a few incorrect debug statements

Mon Jan 12 08:12:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3542_Regression/run_test.pl:
          Added new test script for this test

Sat Jan 10 07:52:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
