@@ -6,43 +6,45 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 # -*- perl -*-
 
 use lib "$ENV{ACE_ROOT}/bin";
-use PerlACE::Run_Test;
+use PerlACE::TestTarget;
+
+my $server = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
+my $client = PerlACE::TestTarget::create_target (2) || die "Create target 2 failed\n";
+
+my $iorbase = "server.ior";
+my $server_iorfile = $server->LocalFile ($iorbase);
+my $client_iorfile = $client->LocalFile ($iorbase);
+$server->DeleteFile($iorbase);
+$client->DeleteFile($iorbase);
 
 $status = 0;
-$baseior = "server.ior";
-$iorfile = PerlACE::LocalFile ($baseior);
 
-unlink $iorfile;
-
-if (PerlACE::is_vxworks_test()) {
-    $SV = new PerlACE::ProcessVX ("server", "-f $baseior");
-}
-else {
-    $SV = new PerlACE::Process ("server", "-f $iorfile");
-}
-$CL = new PerlACE::Process ("client", "-k file://$iorfile -x");
+$SV = $server->CreateProcess ("server", "-f $server_iorfile");
+$CL = $client->CreateProcess ("client", "-k file://$client_iorfile -x");
 
 $SV->Spawn ();
 
-if (PerlACE::waitforfile_timed ($iorfile, $PerlACE::wait_interval_for_process_creation) == -1) {
-    print STDERR "ERROR: cannot find file <$iorfile>\n";
-    $SV->Kill ();
+if ($server->WaitForFileTimed ($iorbase,
+                               $server->ProcessStartWaitInterval()) == -1) {
+    print STDERR "ERROR: cannot find file <$server_iorfile>\n";
+    $SV->Kill (); $SV->TimedWait (1);
     exit 1;
 }
 
-$client = $CL->SpawnWaitKill (60);
-$server = $SV->WaitKill (15);
+$client_status = $CL->SpawnWaitKill ($client->ProcessStartWaitInterval());
+$server_status = $SV->WaitKill ($server->ProcessStopWaitInterval());
 
-unlink $iorfile;
-
-if ($client != 0) {
-    print STDERR "ERROR: client returned $client\n";
+if ($client_status != 0) {
+    print STDERR "ERROR: client returned $client_status\n";
     $status = 1;
 }
 
-if ($server != 0) {
-    print STDERR "ERROR: server returned $server\n";
+if ($server_status != 0) {
+    print STDERR "ERROR: server returned $server_status\n";
     $status = 1;
 }
+
+$server->DeleteFile($iorbase);
+$client->DeleteFile($iorbase);
 
 exit $status;
